# drivesure_backend

./: .env.example  .gitignore  Cargo.toml  demo_endpoints.sh  diesel.toml  full_integration_test.sh  test_all_scenarios.sh  test_vehicle_insert.sh
migrations/2025-11-06-074910-0000_create_users/: down.sql  up.sql
migrations/2025-11-09-152115-0000_create_users/: up.sql
migrations/2025-11-10-062642-0000_create_driver_verifications/: down.sql  up.sql
migrations/2025-11-12-080951-0000_create_vehicles/: down.sql  up.sql
migrations/2025-11-12-135923-0000_create_payment_mandates/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  schema.rs.bak
src/api/: mod.rs  routes.rs
src/config/: database.rs  mod.rs
src/database/: connection.rs  migrations.rs  mod.rs
src/handlers/: driver.rs  mod.rs  payment.rs  user.rs  vehicle.rs
src/migrations/2025-11-09-153814-0000_create_users/: up.sql
src/migrations/2025-11-11-080041-0000_create_payment_mandates/: down.sql  up.sql
src/migrations/2025-11-11-085947-0000_create_vehicles/: down.sql  up.sql
src/migrations/2025-11-11-090848-0000_create_vehicles/: up.sql
src/migrations/2025-11-12-080525-0000_create_vehicles_fix/: down.sql  up.sql
src/migrations/2025-11-13-063955-0000_create_vehicles/: down.sql  up.sql
src/models/: driver.rs  mod.rs  payment.rs  user.rs  vehicle.rs
src/src/: schema.rs
src/state/: mod.rs  user_store.rs  vehicle_store.rs
src/utils/: responses.rs
