[package]
name = "drivesure_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-rekognition = "1.0"   # uncomment when you plug real face-match
actix-web = "4.4"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"

# Change diesel line to include r2d2 feature:
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "r2d2"] }
#diesel = { version = "2.1", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = { version = "2.1", features = ["postgres"] }
dotenvy = "0.15"
r2d2 = "0.8"
